homework/14_03/dep-back.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dep-back
  name: dep-back
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: back-mt
          image: wbitt/network-multitool
