homework/14_03/dep-cache.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dep-cache
  name: dep-cache
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
        - name: cache-mt
          image: wbitt/network-multitool
