homework/14_03/dep-front.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dep-front
  name: dep-front
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: front-mt
          image: wbitt/network-multitool
