homework/14_03/svc-back.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-back
  namespace: app
spec:
  selector:
    app: backend
  ports:
    - name: port-80
      port: 80
      protocol: TCP
      targetPort: 80
