homework/14_03/svc-cache.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-cache
  namespace: app
spec:
  selector:
    app: cache
  ports:
    - name: port-80
      port: 80
      protocol: TCP
      targetPort: 80
