homework/14_03/svc-front.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-front
  namespace: app
spec:
  selector:
    app: frontend
  ports:
    - name: port-80
      port: 80
      protocol: TCP
      targetPort: 80
