homework/14_03/np-front.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: f2b-policy
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: frontend
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
